--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,8 +1,12 @@
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li>
+    <li class="bookmark" id="bookmark<%=bookmark.id%>">
       <a href="<%=bookmark.url%>" target="_blank">
       <%= bookmark.title %>
+      <form action="/bookmarks/<%=bookmark.id%>" method="post">
+        <input type='hidden' name='_method' value='DELETE' />
+        <input type="submit" value="Delete" />
+      </form>
     </a>
   </li>
   <% end %>
