--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -7,7 +7,14 @@
         <input type='hidden' name='_method' value='DELETE' />
         <input type="submit" value="Delete" />
       </form>
+      <form action="/bookmarks/<%=bookmark.id%>/update" method="get">
+        <input type="submit" value="Update" />
+      </form>
     </a>
   </li>
   <% end %>
 </ul>
+
+  <form action="/bookmarks/new" method="get">
+    <input type="submit" value="New" />
+  </form>
